--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "lessc public/stylesheets/styles.less public/stylesheets/styles.css && node ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "gulp": "^4.0.2",
+    "gulp-less": "^4.0.1",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "less": "^3.11.1",
     "morgan": "~1.9.1",
     "socket.io": "^1.7.0"
+  },
+  "devDependencies": {
+    "less": "^3.11.1"
   }
 }
