--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "lessc public/stylesheets/styles.less public/stylesheets/styles.css && nodemon ./bin/www"
+    "start": "lessc public/stylesheets/styles.less public/stylesheets/styles.css && node ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
